--- a/src/css/font.css
+++ b/src/css/font.css
@@ -131,7 +131,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 100;
-	src: url("../fonts/roboto-v48-latin-100.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-100.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-100italic - latin */
 @font-face {
@@ -139,7 +139,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 100;
-	src: url("../fonts/roboto-v48-latin-100italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-100italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-200 - latin */
 @font-face {
@@ -147,7 +148,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 200;
-	src: url("../fonts/roboto-v48-latin-200.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-200.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-200italic - latin */
 @font-face {
@@ -155,7 +156,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 200;
-	src: url("../fonts/roboto-v48-latin-200italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-200italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-300 - latin */
 @font-face {
@@ -163,7 +165,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 300;
-	src: url("../fonts/roboto-v48-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-300italic - latin */
 @font-face {
@@ -171,7 +173,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 300;
-	src: url("../fonts/roboto-v48-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-300italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-regular - latin */
 @font-face {
@@ -179,7 +182,8 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 400;
-	src: url("../fonts/roboto-v48-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-regular.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-italic - latin */
 @font-face {
@@ -187,7 +191,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 400;
-	src: url("../fonts/roboto-v48-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500 - latin */
 @font-face {
@@ -195,7 +200,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 500;
-	src: url("../fonts/roboto-v48-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500italic - latin */
 @font-face {
@@ -203,7 +208,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 500;
-	src: url("../fonts/roboto-v48-latin-500italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-500italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-600 - latin */
 @font-face {
@@ -211,7 +217,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 600;
-	src: url("../fonts/roboto-v48-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-600italic - latin */
 @font-face {
@@ -219,7 +225,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 600;
-	src: url("../fonts/roboto-v48-latin-600italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-600italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700 - latin */
 @font-face {
@@ -227,7 +234,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 700;
-	src: url("../fonts/roboto-v48-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700italic - latin */
 @font-face {
@@ -235,7 +242,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 700;
-	src: url("../fonts/roboto-v48-latin-700italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-700italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-800 - latin */
 @font-face {
@@ -243,7 +251,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 800;
-	src: url("../fonts/roboto-v48-latin-800.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-800.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-800italic - latin */
 @font-face {
@@ -251,7 +259,8 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 800;
-	src: url("../fonts/roboto-v48-latin-800italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-800italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900 - latin */
 @font-face {
@@ -259,7 +268,7 @@
 	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 900;
-	src: url("../fonts/roboto-v48-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900italic - latin */
 @font-face {
@@ -267,5 +276,6 @@
 	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 900;
-	src: url("../fonts/roboto-v48-latin-900italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("../assets/fonts/roboto/roboto-v48-latin-900italic.woff2")
+		format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
