--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@
 	--button-cancel-bg: var(var(--side-hover));
 
 	--primary-font: "Josefin Sans";
+	--roboto-font: "Roboto";
 
 	--hr-color: rgba(255, 255, 255, 0.174);
 }
@@ -49,7 +50,7 @@ body {
 	/* min-height: 100vh; */
 	display: grid;
 	grid-template-columns: 280px 1fr;
-	grid-template-rows: minmax(100vh, max-content) 1fr;
+	/* grid-template-rows: minmax(100vh, max-content) 1fr; */
 	color: var(--text-color);
 	font-family: var(--primary-font);
 }
@@ -110,13 +111,13 @@ svg:hover {
 	background-color: var(--side-hover);
 }
 
-.side-row.tab:focus {
+.active-tab {
 	background-color: var(--side-active);
 	box-shadow: 0 0 0 1px var(--side-active-shadow);
 	color: var(--accent-color-hover);
 }
 
-.side-row.tab:focus > svg {
+.active-tab > svg {
 	fill: var(--accent-color-hover);
 }
 
@@ -129,10 +130,57 @@ hr {
 	margin-bottom: 1rem;
 }
 
+/* main content starts here */
+
 .main-content {
 	background-color: var(--main-bg);
-	grid-row: 1/3;
 	grid-column: 2/3;
+	position: relative;
+
+	padding: 2rem 3rem 0 3rem;
+}
+
+.main-head {
+	color: var(--accent-color-hover);
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 3rem;
+}
+.task-list {
+	max-width: 800px;
+	margin: auto;
+}
+
+.task {
+	padding: 1rem;
+	margin: 1rem 0;
+	font-family: var(--roboto-font);
+}
+
+.task > div {
+	margin-bottom: 1rem;
+}
+
+.task:hover {
+	background-color: var(--task-hover);
+	border-radius: 1rem;
+}
+
+.task-head,
+.task-bottom {
+	display: flex;
+	justify-content: space-between;
+}
+
+.task-head > *,
+.task-options {
+	display: flex;
+	gap: 0.7rem;
+}
+
+.line {
+	height: 1px;
+	background-color: var(--hr-color);
 }
 
 /* * {
