feat: style main-content section and tasks

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,10 +35,10 @@
 
 	--text-color: #000000;
 
-	--side-hover: #ddd;
+	--side-hover: #f2c6c6;
 	--side-active: #f0fff5;
 
-	--task-hover: #ff9696;
+	--task-hover: #ff96964d;
 
 	--button-theme-bg: var(--accent-color-hover);
 	--button-gray-bg: var(var(--side-hover));
@@ -50,7 +50,6 @@ body {
 	/* min-height: 100vh; */
 	display: grid;
 	grid-template-columns: 280px 1fr;
-	/* grid-template-rows: minmax(100vh, max-content) 1fr; */
 	color: var(--text-color);
 	font-family: var(--primary-font);
 }
@@ -65,6 +64,7 @@ svg:hover {
 .side-bar {
 	background-color: var(--side-bg);
 	padding: 0.7rem 0.7rem 1rem;
+	min-height: 100vh;
 }
 
 .side-top,
@@ -154,11 +154,10 @@ hr {
 .task {
 	padding: 1rem;
 	margin: 1rem 0;
-	font-family: var(--roboto-font);
-}
-
-.task > div {
-	margin-bottom: 1rem;
+	/* font-family: "Segoe UI"; */
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .task:hover {
@@ -170,17 +169,42 @@ hr {
 .task-bottom {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .task-head > *,
 .task-options {
 	display: flex;
 	gap: 0.7rem;
+	align-items: center;
+}
+
+.task .title {
+	font-size: 1.6rem;
+	font-weight: 700;
+}
+
+.task .description {
+	font-weight: 300;
+	font-size: 1.2rem;
+}
+
+.task .priority {
+	height: 100%;
+	font-size: 0.9rem;
+	padding: 0.1rem 0.5rem;
+	background-color: red;
+	border-radius: 6px;
 }
 
 .line {
 	height: 1px;
 	background-color: var(--hr-color);
+}
+
+.task input[type="checkbox"] {
+	height: 1.4rem;
+	width: 1.4rem;
 }
 
 /* * {
