--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-/* Light theme (default) */
 :root {
 	--accent-color-normal: #c4b5fd;
 	--accent-color-hover: #8b5cf6;
@@ -18,12 +17,12 @@
 	--task-hover: #262626;
 
 	--button-theme-bg: var(--accent-color-hover);
-	--button-cancel-bg: var(var(--side-hover));
+	--button-cancel-bg: #868ea6;
 
 	--primary-font: "Josefin Sans";
 	--roboto-font: "Roboto";
 
-	--hr-color: rgba(255, 255, 255, 0.174);
+	--hr-color: #ffffff2c;
 }
 
 :root[data-theme="light"] {
@@ -207,47 +206,76 @@ hr {
 	width: 1.4rem;
 }
 
-/* * {
-	outline: 1px solid red;
-} */
-
-/* body {
-	font-family: "Josefin Sans";
-	display: grid;
-	grid-template-columns: 280px 1fr;
-	min-height: 100vh;
+/* modal styles */
+dialog {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	min-width: 500px;
+	border: none;
+	border-radius: 1rem;
+	background-color: var(--side-bg);
+	color: var(--accent-color-hover);
 }
 
-.side-bar {
-	padding: 1.5rem;
+dialog::backdrop {
+	background-color: rgba(0, 0, 0, 0.556);
+}
+form {
+	padding: 1rem;
 }
 
-.side-head {
+.task-form {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	font-size: 1rem;
-	font-weight: 700;
-	margin: 4px 0 4rem 0;
-} */
+	flex-direction: column;
+	gap: 1rem;
+}
 
-/* display: grid;
-grid-template-columns: auto auto; */
-/* align-items: center; */
-/* .side-head > div {
+.form-row {
+	display: grid;
+	grid-template-columns: 85px 1fr;
+	gap: 1rem;
+}
+
+input,
+select,
+textarea {
+	border: 2px solid black;
+	border: none;
+	border-radius: 0.3em;
+	padding: 0.5rem 1rem;
+}
+
+textarea {
+	resize: vertical;
+	width: 100%;
+	max-height: 100px;
+	min-height: 40px;
+}
+
+.form-btns {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 0.4rem;
+	width: 100%;
+	gap: 1rem;
 }
 
-.side-row {
-	font-weight: 400;
-	font-size: 14px;
-	display: flex;
-	gap: 0.8rem;
-	justify-content: flex-start;
-	align-items: center;
-	margin-bottom: 1.2rem;
+.form-btns button {
+	padding: 0.2rem 1rem;
+	border-radius: 0.3rem;
+	margin-top: 1rem;
+}
+
+button.cancel {
+	background-color: var(--button-cancel-bg);
+}
+
+button.submit {
+	background-color: var(--button-theme-bg);
+}
+
+/* * {
+	outline: 1px solid red;
 } */
